Display user's stars for Post and Profile page. Remove old code.

--- a/bruinmarket/src/components/pages/Post.css
+++ b/bruinmarket/src/components/pages/Post.css
@@ -1,3 +1,11 @@
 a:hover {
     text-decoration: none;
 }
+
+Carousel img {
+    border-radius: 24px
+}
+
+Button {
+    background-color: aliceblue;
+}
